fix: post, admin, author, added comment